# URCAT

./: Diul2100.test.gff3  Eisa2100.test.gff3  README.md  pyproject.toml
examples/: find_projectable_seeds.py  run_toy_chr21.py
src/comparative_annotator/: cli.py
src/comparative_annotator/config/: manifest.py
src/comparative_annotator/io/: gff3.py  gff3_writer.py  hal.py
src/comparative_annotator/loci/: comparative_builder.py  comparative_loci.py  species_loci.py
src/comparative_annotator/missing/: consensus.py
src/comparative_annotator/models/: comparative.py  comparative_locus.py  consensus.py  locus.py  match.py  projected_transcript.py  projection.py  reciprocal.py  scoring.py  transcript.py  transcript_match.py
src/comparative_annotator/orthology/: __init__.py  edge_model.py
src/comparative_annotator/pipeline/: infer_locus.py
src/comparative_annotator/projection/: adjudication.py  matching.py  reciprocal.py  reconstruct.py  reporting.py  scoring.py  transcript_ranking.py
src/comparative_annotator/qc/: reporting.py
src/comparative_annotator/workflow/: analysis_tables.py  config.py  (+19 more)
test_data/: Hmel202001o.test.gff3
tests/: test_candidate_loci.py  test_comparative_builder.py  test_comparative_loci.py  test_gff3_parser.py  test_hal_adapter.py  test_infer_locus.py  test_missing_consensus.py  test_projection_adjudication.py  test_projection_matching.py  test_projection_reconstruction.py  test_projection_scoring.py  test_reciprocal_projection.py  test_species_loci.py  test_strand_conflict.py  test_transcript_projection.py  test_transcript_ranking.py
